crates/executor/src/tests/sql/ddl/snapshots/snowflake_error/query_alter_table_missing_table_snowflake_error.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"ALTER TABLE embucket.public.missing_table add column c5 VARCHAR\""
info: Tests Snowflake Error
---
Err(
    "Snowflake Error: SQL compilation error: Table 'embucket.public.missing_table' does not exist or not authorized",
)
