crates/executor/src/tests/sql/ddl/snapshots/snowflake_error/query_drop_table_if_exists_missing_schema_snowflake_error.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"DROP TABLE IF EXISTS embucket.missing_schema.some_table\""
info: Tests Snowflake Error
---
Ok(
    [
        "+----------------------------------+",
        "| status                           |",
        "+----------------------------------+",
        "| Statement executed successfully. |",
        "+----------------------------------+",
    ],
)
