crates/executor/src/tests/sql/ddl/snapshots/snowflake_error/query_drop_table_missing_catalog_snowflake_error.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"DROP TABLE missing_catalog.public.some_table\""
info: Tests Snowflake Error
---
Err(
    "Snowflake Error: SQL compilation error: Database 'missing_catalog' does not exist or not authorized",
)
