crates/executor/src/tests/sql/ddl/snapshots/snowflake_error/query_drop_table_missing_table_snowflake_error.snap
---
source: crates/executor/src/tests/sql/ddl/table.rs
description: "\"DROP TABLE embucket.public.missing\""
info: Tests Snowflake Error
---
Err(
    "Snowflake Error: SQL compilation error: Table 'embucket.public.missing' does not exist or not authorized",
)
